<resources>
    <string name="app_name">Yoga Feelings</string>

    <string name="hello_world">Hello world!</string>
    <string name="text_message">Hi again.</string>

    <string name="mood_button">Mood</string>
    <string name="feeling"></string>

    <string name="name_edit">Name</string>

    <!-- START Toggle -->
    <string name="toggle_on">positive</string>
    <string name="toggle_off">negative</string>
    <!-- END Toggle -->

    <!-- START Radio Buttons -->
    <string name="yoga_text">Yoga</string>
    <string name="yoga1_radio">Yin</string>
    <string name="yoga2_radio">Bikram</string>
    <string name="yoga3_radio">Hatha</string>
    <!-- END Radio Buttons -->

    <!-- START Check Boxes -->
    <string name="enlightened_check">enlightened</string>
    <string name="conservative_check">conservative</string>
    <string name="sarcastic_check">sarcastic</string>
    <string name="secretive_check">secretive</string>
    <!-- END Check Boxes -->

    <!-- START Switch -->
    <string name="meditate_switch">Meditate</string>
    <!-- END Switch -->

    <string name="mood_image">Mood Image</string>

    <string-array name="moods">
        <item>happy</item>
        <item>sad</item>
        <item>confused</item>
        <item>angry</item>
    </string-array>
</resources>