<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#cc2828">

        <TextView android:text="@string/text_message"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
        android:textColor="#ffff65ff"
        android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:id="@+id/textView"
            android:layout_marginBottom="20dp"
            />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:id="@+id/linear1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_editText"
            android:hint="@string/name_edit"
            android:layout_weight="1"
            />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/toggle_on"
            android:textOff="@string/toggle_off"
            android:id="@+id/energy_toggle"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear3"
        android:layout_below="@+id/linear2"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yoga_text"
            android:layout_weight="1"
            android:layout_marginTop="7dp"
            android:paddingLeft="8dp"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yoga_type"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga1_radio"
                android:id="@+id/radioButton1"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga2_radio"
                android:id="@+id/radioButton2"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yoga3_radio"
                android:id="@+id/radioButton3"
                android:layout_weight="1"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:id="@+id/linear2"
        >

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/moods"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="110dp"
            android:text="@string/meditate_switch"
            android:id="@+id/switch1"
            />

    </LinearLayout>

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linear5"
    android:id="@+id/linear6"
        >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_button"
        android:id="@+id/button"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"

        android:onClick="findMood"
        />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear3"
        android:id="@+id/linear4"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sarcastic_check"
            android:id="@+id/checkBox1"
            android:layout_weight="1"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conservative_check"
            android:id="@+id/checkBox2"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/linear4"
        android:id="@+id/linear5"
        >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secretive_check"
            android:id="@+id/checkBox3"
            android:layout_weight="1"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enlightened_check"
            android:id="@+id/checkBox4"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear6"
        android:id="@+id/linear7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        >


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/mood_image"
            />

        </LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linear7"
    android:id="@+id/linear8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeling"
        android:id="@+id/feelingText"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"
        />

</LinearLayout>

</RelativeLayout>
